# vanilla_pkg

./: .travis.yml  README.md  meta.yaml  setup.cfg  setup.py  tox.ini
src/vanilla_pkg/: Dog.py  __init__.py
src/vanilla_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vanilla_pkg/: Dog.py  Mocks.py  __init__.py  buoy.py
vanilla_pkg/tests/: buoy_test.py  dog_test.py  mock_test.py
